--- a/SPAView/src/app/views/dashboard/error/error.component.html
+++ b/SPAView/src/app/views/dashboard/error/error.component.html
@@ -1,1 +1,12 @@
-<p>error works!</p>
+
+<div class="animated fadeIn">
+    <div class="row">
+        <div class="card">
+          <div class="card-header">
+            <h1>شما به این صفحه دسترسی ندارید</h1>
+          </div>
+        </div>
+    </div>
+</div>
+    
+        
