--- a/SPAView/src/app/views/dashboard/dashboard.component.html
+++ b/SPAView/src/app/views/dashboard/dashboard.component.html
@@ -1,4 +1,5 @@
 <div class="animated fadeIn">
+
   <div class="row">
     <div class="col-sm-12">
       <div class="card">
@@ -175,5 +176,21 @@
         </div>
     </div>
   </div>
+  <div class="row">
+    <div class="col-sm-3">
+      <a href="https://www.instagram.com/farshboom/" target="_blank"><i class="fa fa-instagram fa-3x"></i></a>
 
+    </div>
+    <div class="col-sm-3">
+      <a href="https://t.me/farshboomchanel" target="_blank"><i class="fa fa-telegram fa-3x"></i></a>
+    </div>
+    <div class="col-sm-3">
+      <i class="fa fa-whatsapp fa-3x"></i>
+      09123034979
+    </div>
+    <div class="col-sm-3">
+      <i class="fa fa-phone fa-3x"></i>
+      021-86083101
+    </div>
+  </div>
 </div>
