--- a/SPAView/src/app/containers/default-layout/default-layout.component.html
+++ b/SPAView/src/app/containers/default-layout/default-layout.component.html
@@ -1,39 +1,40 @@
-<app-header
-  [navbarBrandRouterLink]="['/dashboard']"
-  [fixed]="true"
-  [navbarBrandFull]="{src: 'assets/img/brand/logo-icon.png', width: 27, height: 40, alt: 'CoreUI Logo'}"
-  [navbarBrandMinimized]="{src: 'assets/img/brand/logo-icon.png', width: 27, height: 40, alt: 'CoreUI Logo'}"
-  [sidebarToggler]="'lg'"
-  [asideMenuToggler]="'lg'">
-  <ul class="nav navbar-nav d-md-down-none">
-    <li class="nav-item px-3">
-      <a class="nav-link" [routerLink]="['/dashboard/farshboombank']">جستجوی فرش</a>
-    </li>
-    <li class="nav-item px-3">
-      <a class="nav-link" [routerLink]="['/dashboard/content/2']">راهنمای فرش</a>
-    </li>
-    <li class="nav-item px-3">
-      <a class="nav-link" [routerLink]="['/dashboard/content/1']">معرفی گونه ها</a>
-    </li>
-  </ul>
-  <ul class="nav navbar-nav ml-auto">
-    <li *ngIf="loggedIn()" class="nav-item dropdown" dropdown placement="bottom right">
-      <a class="nav-link" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false" dropdownToggle (click)="false">
-        <img src="assets/images/users/2.png" class="img-avatar" alt="farshboom.com"/>
-      </a>
-      <div class="dropdown-menu dropdown-menu-right" *dropdownMenu aria-labelledby="simple-dropdown">
-        <div class="dropdown-header text-center"><strong></strong></div>
-          <a class="dropdown-item" (click)="onLogout()"><i class="fa fa-user"></i> خروج</a>
-      </div>
-    </li>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="#">Navbar</a>
+  <button aria-controls="navbarSupportedContent" (click)="isCollapsed = !isCollapsed" [attr.aria-expanded]="!isCollapsed" class="navbar-toggler" type="button" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
 
-  </ul>
-</app-header>
+  <div class="collapse navbar-collapse" id="navbarSupportedContent" [collapse]="isCollapsed" [isAnimated]="true">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Link</a>
+      </li>
+      <li class="nav-item dropdown" dropdown>
+        <a id="link-dropdown" class="nav-link dropdown-toggle" href dropdownToggle (click)="false" aria-controls="your-dropdown">
+          Dropdown
+        </a>
+        <div id="your-dropdown" class="dropdown-menu" aria-labelledby="link-dropdown" *dropdownMenu>
+          <a class="dropdown-item" href="#">Action</a>
+          <a class="dropdown-item" href="#">Another action</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="#">Something else here</a>
+        </div>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link disabled" href="#">Disabled</a>
+      </li>
+    </ul>
+    <form class="form-inline my-2 my-lg-0">
+      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+    </form>
+  </div>
+</nav>
 <div class="app-body">
-  <app-sidebar #appSidebar [fixed]="true" [display]="'lg'" [minimized]="sidebarMinimized" (minimizedChange)="toggleMinimize($event)">
-    <app-sidebar-nav [navItems]="navItems" [perfectScrollbar] [disabled]="appSidebar.minimized"></app-sidebar-nav>
-    <app-sidebar-minimizer></app-sidebar-minimizer>
-  </app-sidebar>
+
   <main class="main">
     <cui-breadcrumb>
       <li class="breadcrumb-menu d-md-down-none">
@@ -48,102 +49,7 @@
       <router-outlet></router-outlet>
     </div>
   </main>
-  <app-aside [fixed]="true" [display]="false" [ngClass]="'test'">
-    <tabset>
-      <tab>
-        <ng-template tabHeading><i class="icon-list"></i></ng-template>
-        <div class="list-group list-group-accent">
-          <div class="list-group-item list-group-item-accent-secondary bg-light text-center font-weight-bold text-muted text-uppercase small">Today</div>
-          <div class="list-group-item list-group-item-accent-warning list-group-item-divider">
-            <div class="avatar float-right">
-              <img class="img-avatar" src="assets/image/logo-icon.png" alt="admin@bootstrapmaster.com">
-            </div>
-            <div>وقایع نمایشگاه قبل
-              <strong>Lucas</strong>
-            </div>
-            <small class="text-muted mr-3">
-              <i class="icon-calendar"></i>فرش بوم</small>
-            <small class="text-muted">
-              <i class="icon-location-pin"></i> فرش بوم</small>
-          </div>
-          <div class="list-group-item list-group-item-accent-info">
-            <div class="avatar float-right">
-              <img class="img-avatar" src="assets/img/avatars/4.jpg" alt="admin@bootstrapmaster.com">
-            </div>
-            <div>فرش بوم
-              <strong>فرش بوم</strong>
-            </div>
-            <small class="text-muted mr-3">
-              <i class="icon-calendar"></i>  4 - 5pm</small>
-            <small class="text-muted">
-              <i class="icon-social-skype"></i> فرش بوم</small>
-          </div>
-          <div class="list-group-item list-group-item-accent-secondary bg-light text-center font-weight-bold text-muted text-uppercase small">نمایشگاه بعدی</div>
-          <div class="list-group-item list-group-item-accent-warning list-group-item-divider">
-            <div class="avatar float-right">
-              <img class="img-avatar" src="assets/image/logo-icon.png" alt="admin@bootstrapmaster.com">
-            </div>
-            <div>وقایع نمایشگاه قبل
-              <strong>Lucas</strong>
-            </div>
-            <small class="text-muted mr-3">
-              <i class="icon-calendar"></i>  1 - 3pm</small>
-            <small class="text-muted">
-              <i class="icon-location-pin"></i> فرش بوم</small>
-          </div>
-        </div>
-      </tab>
-      <tab>
-        <ng-template tabHeading><i class="icon-speech"></i></ng-template>
-        <div class="p-3">
-          <div class="message">
-            <div class="py-3 pb-5 mr-3 float-left">
-              <div class="avatar">
-                <img src="assets/img/avatars/7.jpg" class="img-avatar" alt="admin@bootstrapmaster.com">
-                <span class="avatar-status badge-success"></span>
-              </div>
-            </div>
-            <div>
-              <small class="text-muted">اخبار</small>
-              <small class="text-muted float-right mt-1">1:52 PM</small>
-            </div>
-            <div class="text-truncate font-weight-bold">فرش بوم</div>
-            <small class="text-muted">فرش بوم</small>
-          </div>
-          <hr>
-          <div class="message">
-            <div class="py-3 pb-5 mr-3 float-left">
-              <div class="avatar">
-                <img src="assets/img/avatars/7.jpg" class="img-avatar" alt="admin@bootstrapmaster.com">
-                <span class="avatar-status badge-success"></span>
-              </div>
-            </div>
-            <div>
-              <small class="text-muted">اخبار</small>
-              <small class="text-muted float-right mt-1">1:52 PM</small>
-            </div>
-            <div class="text-truncate font-weight-bold">فرش بوم</div>
-            <small class="text-muted">فرش بوم</small>
-          </div>
-          <hr>
-          <div class="message">
-            <div class="py-3 pb-5 mr-3 float-left">
-              <div class="avatar">
-                <img src="assets/img/avatars/7.jpg" class="img-avatar" alt="admin@bootstrapmaster.com">
-                <span class="avatar-status badge-success"></span>
-              </div>
-            </div>
-            <div>
-              <small class="text-muted">اخبار</small>
-              <small class="text-muted float-right mt-1">1:52 PM</small>
-            </div>
-            <div class="text-truncate font-weight-bold">فرش بوم</div>
-            <small class="text-muted">فرش بوم</small>
-          </div>
-        </div>
-      </tab>
-    </tabset>
-  </app-aside>
+
 </div>
 <app-footer>
 
