--- a/SPAView/src/app/views/dashboard/farshboom-bank/farshboom-bank-component.html
+++ b/SPAView/src/app/views/dashboard/farshboom-bank/farshboom-bank-component.html
@@ -62,6 +62,14 @@
                       </select>
                   </div>
                   <div class="form-group px-4">
+                    <label for="length">طول :</label>
+                       <input type="text" [(ngModel)]="userParams.length" class="form-control" name="length">
+                  </div>
+                  <div class="form-group px-4">
+                    <label for="height"> عرض :</label>
+                       <input type="text" [(ngModel)]="userParams.height" class="form-control" name="height">
+                  </div>
+                  <div class="form-group px-4">
                     <button type="submit" class="btn btn-primary" style="margin-left:10px">جستجو</button>
                     <button type="button" class="btn btn-info" (click)="resetFilters()" style="margin-left:10px">
                         بازیابی
