--- a/SPAView/src/app/containers/default-layout/default-layout.component.html
+++ b/SPAView/src/app/containers/default-layout/default-layout.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Navbar</a>
+  <a class="navbar-brand" [routerLink]="[ '/dashboard']"><img src="../../../assets/img/brand/logo-icon.png" alt="Logo" style="width:40px;">فرش بوم</a>
   <button aria-controls="navbarSupportedContent" (click)="isCollapsed = !isCollapsed" [attr.aria-expanded]="!isCollapsed" class="navbar-toggler" type="button" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -7,30 +7,72 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent" [collapse]="isCollapsed" [isAnimated]="true">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
+        <a class="nav-link" [routerLink]="[ '/dashboard/farshboombank']">جستجوی فرش <span class="sr-only"></span></a>
       </li>
       <li class="nav-item dropdown" dropdown>
         <a id="link-dropdown" class="nav-link dropdown-toggle" href dropdownToggle (click)="false" aria-controls="your-dropdown">
-          Dropdown
+          تنوع گونه
         </a>
         <div id="your-dropdown" class="dropdown-menu" aria-labelledby="link-dropdown" *dropdownMenu>
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Something else here</a>
+          <div *ngFor="let item of menu1">
+            <a class="dropdown-item" [routerLink]="[ '/dashboard/content', item.id]">{{item.title}}</a>
+          </div>
         </div>
       </li>
-      <li class="nav-item">
-        <a class="nav-link disabled" href="#">Disabled</a>
+      <li class="nav-item dropdown" dropdown>
+        <a id="link-dropdown" class="nav-link dropdown-toggle" href dropdownToggle (click)="false" aria-controls="your-dropdown">
+          ارزش اقتصادی
+        </a>
+        <div id="your-dropdown" class="dropdown-menu" aria-labelledby="link-dropdown" *dropdownMenu>
+          <div *ngFor="let item of menu2">
+            <a class="dropdown-item" [routerLink]="[ '/dashboard/content', item.id]">{{item.title}}</a>
+          </div>
+        </div>
+      </li>
+      <li class="nav-item dropdown" dropdown>
+        <a id="link-dropdown" class="nav-link dropdown-toggle" href dropdownToggle (click)="false" aria-controls="your-dropdown">
+          شناسنامه معتبر
+        </a>
+        <div id="your-dropdown" class="dropdown-menu" aria-labelledby="link-dropdown" *dropdownMenu>
+          <div *ngFor="let item of menu3">
+            <a class="dropdown-item" [routerLink]="[ '/dashboard/content', item.id]">{{item.title}}</a>
+          </div>
+        </div>
+      </li>
+      <li class="nav-item dropdown" dropdown>
+        <a id="link-dropdown" class="nav-link dropdown-toggle" href dropdownToggle (click)="false" aria-controls="your-dropdown">
+          اطلاعات فنی
+        </a>
+        <div id="your-dropdown" class="dropdown-menu" aria-labelledby="link-dropdown" *dropdownMenu>
+          <div *ngFor="let item of menu4">
+            <a class="dropdown-item" [routerLink]="[ '/dashboard/content', item.id]">{{item.title}}</a>
+          </div>
+        </div>
+      </li>
+      <li class="nav-item dropdown" dropdown>
+        <a id="link-dropdown" class="nav-link dropdown-toggle" href dropdownToggle (click)="false" aria-controls="your-dropdown">
+          مشاوره دکوراسیون
+        </a>
+        <div id="your-dropdown" class="dropdown-menu" aria-labelledby="link-dropdown" *dropdownMenu>
+          <div *ngFor="let item of menu5">
+            <a class="dropdown-item" [routerLink]="[ '/dashboard/content', item.id]">{{item.title}}</a>
+          </div>
+        </div>
+      </li>
+      <li class="nav-item dropdown" dropdown>
+        <a id="link-dropdown" class="nav-link dropdown-toggle" href dropdownToggle (click)="false" aria-controls="your-dropdown">
+          حمایت از قالیبافان
+        </a>
+        <div id="your-dropdown" class="dropdown-menu" aria-labelledby="link-dropdown" *dropdownMenu>
+          <div *ngFor="let item of menu6">
+            <a class="dropdown-item" [routerLink]="[ '/dashboard/content', item.id]">{{item.title}}</a>
+          </div>
+        </div>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link" [routerLink]="[ '/dashboard/content', 16]">درباره ما<span class="sr-only"></span></a>
       </li>
     </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
   </div>
 </nav>
 <div class="app-body">
