--- a/SPAView/src/app/views/dashboard/dashboard.component.html
+++ b/SPAView/src/app/views/dashboard/dashboard.component.html
@@ -21,109 +21,98 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-sm-6 col-lg-3">
-      <div class="card text-white bg-info">
-        <div class="card-body pb-0">
-          <div class="text-value">{{keyvalues[0].title}} </div>
-          <div>تعداد فالورهای فرش بوم</div>
+    <div class="col-sm-3">
+      <div class="card">
+        <div class="card-body">
+          <img src="assets/images/users/product.jpg" alt="image slide" style="display: block; width: 100%;">
         </div>
-        <div class="chart-wrapper mt-3 mx-3" style="height:70px;">
-          <canvas baseChart class="chart"
-          [datasets]="lineChart2Data"
-          [labels]="lineChart2Labels"
-          [options]="lineChart2Options"
-          [colors]="lineChart2Colours"
-          [legend]="lineChart2Legend"
-          [chartType]="lineChart2Type"></canvas>
+        <div class="card-footer">
+          تعداد فالورهای فرش بوم
+          {{keyvalues[0].title}}
         </div>
-      </div>
-    </div><!--/.col-->
-    <div class="col-sm-6 col-lg-3">
-      <div class="card text-white bg-primary">
-        <div class="card-body pb-0">
-          <div class="text-value">{{stringModel[1].id}}</div>
-          <div>تولید کنندگان فرش بوم</div>
-        </div>
-        <div class="chart-wrapper mt-3 mx-3" style="height:70px;">
-          <canvas baseChart class="chart"
-                  [datasets]="lineChart1Data"
-                  [labels]="lineChart1Labels"
-                  [options]="lineChart1Options"
-                  [colors]="lineChart1Colours"
-                  [legend]="lineChart1Legend"
-                  [chartType]="lineChart1Type"></canvas>
-        </div>
-      </div>
-    </div><!--/.col-->
-    <div class="col-sm-6 col-lg-3">
-      <div class="card text-white bg-warning">
-        <div class="card-body pb-0">
-          <div class="text-value">{{stringModel[0].id}}</div>
-          <div>تعداد نمایشگاه های فرش بوم</div>
-        </div>
-        <div class="chart-wrapper mt-3" style="height:70px;">
-          <canvas baseChart class="chart"
-          [datasets]="lineChart3Data"
-          [labels]="lineChart3Labels"
-          [options]="lineChart3Options"
-          [colors]="lineChart3Colours"
-          [legend]="lineChart3Legend"
-          [chartType]="lineChart3Type"></canvas>
-        </div>
-      </div>
-    </div><!--/.col-->
-    <div class="col-sm-6 col-lg-3">
-      <div class="card text-white bg-danger">
-        <div class="card-body pb-0">
-          <div class="text-value">{{keyvalues[1].title}}</div>
-          <div>تعداد بازدیدکنندگان نمایشگاه</div>
-        </div>
-        <div class="chart-wrapper mt-3 mx-3" style="height:70px;">
-          <canvas baseChart class="chart"
-          [datasets]="barChart1Data"
-          [labels]="barChart1Labels"
-          [options]="barChart1Options"
-          [colors]="barChart1Colours"
-          [legend]="barChart1Legend"
-          [chartType]="barChart1Type"></canvas>
-        </div>
-      </div>
-    </div><!--/.col-->
-  </div><!--/.row-->
-  <div class="card">
-    <div class="card-body">
-      <div class="row">
-        <div class="col-sm-5">
-          <h4 class="card-title mb-0">تنوع فرش های نمایشگاه های اخیر</h4>
-          <div class="small text-muted">فرش بوم</div>
-        </div><!--/.col-->
-      </div><!--/.row-->
-      <div class="chart-wrapper" style="height:300px;margin-top:40px;">
-        <canvas baseChart class="chart"
-        [datasets]="mainChartDatas"
-        [labels]="mainChartLabels"
-        [options]="DataOptions"
-        [colors]="lineChart2Colours"
-        [legend]="lineChart2Legend"
-        [chartType]="lineChart2Type"></canvas>
       </div>
     </div>
-    <!-- <div class="card-footer">
-      <div class="d-inline-block" *ngFor="let item of mainChartLabels">
-        <div class="bg-primary">{{item}}</div>
+    <div class="col-sm-3">
+        <div class="card">
+          <div class="card-body">
+            <img src="assets/images/users/team.jpg" alt="image slide" style="display: block; width: 100%;">
+          </div>
+          <div class="card-footer">
+            تعداد تولید کنندگان
+            {{keyvalues[1].title}}
+          </div>
+        </div>
+    </div>
+    <div class="col-sm-3">
+      <div class="card">
+        <div class="card-body">
+          <img src="assets/images/users/providers.jpg" alt="image slide" style="display: block; width: 100%;">
+        </div>
+        <div class="card-footer">
+          تعداد نمایشگاه های فرش بوم
+          {{stringModel[1].id}}
+        </div>
       </div>
-    </div> -->
+    </div>
+    <div class="col-sm-3">
+        <div class="card">
+          <div class="card-body">
+            <img src="assets/images/users/exhibition.jpg" alt="image slide" style="display: block; width: 100%;">
+          </div>
+          <div class="card-footer">
+            تعداد بازدیدکنندگان نمایشگاه
+            {{keyvalues[1].title}}
+          </div>
+        </div>
+    </div>
   </div>
   <div class="row">
-    <div class="col-sm-8">
+    <div class="col-sm-6">
+      <div class="card">
+        <div class="card-header">
+          نمایشگاه های اخیر ما
+       </div>
+        <div class="card-body">
+          <div class="chart-wrapper">
+            <canvas baseChart class="chart"
+            [datasets]="lineChartData2"
+            [labels]="lineChartLabels2"
+            [options]="lineChartOptions"
+            [colors]="lineChartColours2"
+            [legend]="lineChartLegend"
+            [chartType]="lineChartType"
+            (chartHover)="chartHovered($event)"
+            (chartClick)="chartClicked($event)"></canvas>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-6">
+      <div class="card">
+        <div class="card-header">
+          انواع گونه ها در نمایشگاه های اخیر
+       </div>
+        <div class="card-body">
+          <div class="chart-wrapper">
+            <canvas baseChart class="chart"
+            [datasets]="lineChartData"
+            [labels]="lineChartLabels"
+            [options]="lineChartOptions"
+            [colors]="lineChartColours"
+            [legend]="lineChartLegend"
+            [chartType]="lineChartType"
+            (chartHover)="chartHovered($event)"
+            (chartClick)="chartClicked($event)"></canvas>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-sm-6">
       <div class="card">
         <div class="card-header">
           گونه های پربازدید فرش بوم
-          <div class="card-header-actions">
-            <a href="http://www.chartjs.org">
-              <small class="text-muted"></small>
-            </a>
-          </div>
         </div>
         <div class="card-body">
           <div class="chart-wrapper">
@@ -137,21 +126,24 @@
         </div>
       </div>
     </div>
-    <div class="col-sm-4">
-      <div class="card-header">
-        درصد گونه ها
-      </div>
-        <div class="card">
+    <div class="col-md-6">
+      <div class="card">
+        <div class="card-header">
+
         </div>
+        <div class="card-body">
+
+        </div>
+      </div>
     </div>
   </div>
   <div class="row">
     <div class="col-sm-3">
-      <a href="https://www.instagram.com/farshboom/" target="_blank"><i class="fa fa-instagram fa-3x"></i></a>
+      <a href="https://www.instagram.com/farshboom/" target="_blank"><i class="fa fa-instagram fa-3x"></i>-www.instagram.com/farshboom</a>
 
     </div>
     <div class="col-sm-3">
-      <a href="https://t.me/farshboomchanel" target="_blank"><i class="fa fa-telegram fa-3x"></i></a>
+      <a href="https://t.me/farshboomchanel" target="_blank"><i class="fa fa-telegram fa-3x"></i>-t.me/farshboomchanel</a>
     </div>
     <div class="col-sm-3">
       <i class="fa fa-whatsapp fa-3x"></i>
